added 'is' check

--- a/stylus/main.styl
+++ b/stylus/main.styl
@@ -35,3 +35,7 @@
 	vertical-align: top
 	background-color: #eee
 	border: 5px solid #000
+
+.menu-is
+	background-color: #F00
+	border 6px solid #F00
